--- a/DeepfakeBench_DF40/training/config/detector/capsule_net.yaml
+++ b/DeepfakeBench_DF40/training/config/detector/capsule_net.yaml
@@ -1,10 +1,11 @@
 # log dir 
-log_dir: /home/antoine/DF40/df40_exps/trainOnDF40/xception/binary
+log_dir: /mntcephfs/lab_data/yuanxinhang/benchmark_results/logs_final/capsule_new
 
 # model setting
 pretrained: ./training/pretrained/xception-b5690688.pth   # path to a pre-trained model, if using one
-model_name: xception   # model name
-backbone_name: xception  # backbone name
+model_name: capsule_net # model name
+backbone_name: xception  # no backbone VGGextractor
+num_classes: 2
 
 #backbone setting
 backbone_config:
@@ -15,24 +16,24 @@ backbone_config:
 
 # dataset
 all_dataset: [FaceForensics++, FF-F2F, FF-DF, FF-FS, FF-NT, FaceShifter, DeepFakeDetection, Celeb-DF-v1, Celeb-DF-v2, DFDCP, DFDC, DeeperForensics-1.0, UADFV]
-train_dataset: [FSAll_ff,FRAll_ff,EFSAll_ff]
-test_dataset: [FSAll_ff,FRAll_ff,EFSAll_ff]
+train_dataset: [FaceForensics++, Celeb-DF-v2, DFDCP, DeepFakeDetection]
+test_dataset: [FaceForensics++, DeepFakeDetection, Celeb-DF-v2, DFDCP]
 
-compression: c23  # compression-level for videos
-train_batchSize: 64   # training batch size
+train_batchSize: 32   # training batch size
 test_batchSize: 32   # test batch size
-workers: 4   # number of data loading workers
-frame_num: {'train': 8, 'test': 8}   # number of frames to use per video in training and testing
+workers: 8   # number of data loading workers
+frame_num: {'train': 32, 'test': 32}   # number of frames to use per video in training and testing
 resolution: 256   # resolution of output image to network
 with_mask: false   # whether to include mask information in the input
 with_landmark: false   # whether to include facial landmark information in the input
+compression: c23 # compression-level for videos
 
 
 # data augmentation
-use_data_augmentation: true  # Add this flag to enable/disable data augmentation
+use_data_augmentation: false  # Add this flag to enable/disable data augmentation
 data_aug:
   flip_prob: 0.5
-  rotate_prob: 0.0
+  rotate_prob: 0.5
   rotate_limit: [-10, 10]
   blur_prob: 0.5
   blur_limit: [3, 7]
@@ -51,7 +52,7 @@ optimizer:
   # choose between 'adam' and 'sgd'
   type: adam
   adam:
-    lr: 0.0002  # learning rate
+    lr: 0.00008  # learning rate
     beta1: 0.9  # beta1 for Adam optimizer
     beta2: 0.999 # beta2 for Adam optimizer
     eps: 0.00000001  # epsilon for Adam optimizer
@@ -70,17 +71,16 @@ save_epoch: 1   # interval epochs for saving models
 rec_iter: 100   # interval iterations for recording
 logdir: ./logs   # folder to output images and logs
 manualSeed: 1024   # manual seed for random number generation
-save_ckpt: true   # whether to save checkpoint
-save_feat: true   # whether to save features
+save_ckpt: false   # whether to save checkpoint
 
 # loss function
-loss_func: cross_entropy   # loss function to use
+loss_func: capsule_loss   # loss function to use
 losstype: null
 
 # metric
 metric_scoring: auc   # metric for evaluation (auc, acc, eer, ap)
 
 # cuda
-ngpu: 1   # number of GPUs to use
+
 cuda: true   # whether to use CUDA acceleration
 cudnn: true   # whether to use CuDNN for convolution operations
