--- a/DeepfakeBench_DF40/training/config/detector/clip-base.yaml
+++ b/DeepfakeBench_DF40/training/config/detector/clip-base.yaml
@@ -1,13 +1,15 @@
 # log dir 
-log_dir: /home/antoine/DF40/df40_exps/trainOnDF40/xception/binary
-metrics_dir: /home/antoine/DF40/df40_exps/trainOnDF40/xception/metrics/
-preds_dir: /home/antoine/DF40/df40_exps/trainOnDF40/xception/preds/
+log_dir: /Youtu_Pangu_Security/public/youtu-pangu-public/zhiyuanyan/logs/df40_exps/trainOnEFS/clip_base
+metrics_dir: /home/antoine/DF40/df40_exps/trainOnDF40/clip_base/metrics/
+preds_dir: /home/antoine/DF40/df40_exps/trainOnDF40/clip_base/preds/
 save_preds: true
+
+#log_dir: /Youtu_Pangu_Security/public/youtu-pangu-public/zhiyuanyan/logs/df40_exps/trainOnDF40/clip_multihead
 
 # model setting
 pretrained: ./training/pretrained/xception-b5690688.pth   # path to a pre-trained model, if using one
-model_name: xception   # model name
-backbone_name: xception  # backbone name
+model_name: clip   # model name
+backbone_name: vit  # backbone name
 
 #backbone setting
 backbone_config:
@@ -18,15 +20,15 @@ backbone_config:
 
 # dataset
 all_dataset: [FaceForensics++, FF-F2F, FF-DF, FF-FS, FF-NT, FaceShifter, DeepFakeDetection, Celeb-DF-v1, Celeb-DF-v2, DFDCP, DFDC, DeeperForensics-1.0, UADFV]
-train_dataset: [FSAll_ff,FRAll_ff,EFSAll_ff]
-test_dataset: [FSAll_ff,FRAll_ff,EFSAll_ff]
+train_dataset: [FaceForensics++]
+test_dataset: [Celeb-DF-v2, FaceShifter, DeeperForensics-1.0]
 
 compression: c23  # compression-level for videos
-train_batchSize: 64   # training batch size
+train_batchSize: 32   # training batch size
 test_batchSize: 32   # test batch size
-workers: 4   # number of data loading workers
+workers: 8   # number of data loading workers
 frame_num: {'train': 8, 'test': 32}   # number of frames to use per video in training and testing
-resolution: 256   # resolution of output image to network
+resolution: 224   # resolution of output image to network
 with_mask: false   # whether to include mask information in the input
 with_landmark: false   # whether to include facial landmark information in the input
 
@@ -35,7 +37,7 @@ with_landmark: false   # whether to include facial landmark information in the i
 use_data_augmentation: true  # Add this flag to enable/disable data augmentation
 data_aug:
   flip_prob: 0.5
-  rotate_prob: 0.0
+  rotate_prob: 0.5
   rotate_limit: [-10, 10]
   blur_prob: 0.5
   blur_limit: [3, 7]
@@ -54,7 +56,7 @@ optimizer:
   # choose between 'adam' and 'sgd'
   type: adam
   adam:
-    lr: 0.0002  # learning rate
+    lr: 0.00001  # learning rate
     beta1: 0.9  # beta1 for Adam optimizer
     beta2: 0.999 # beta2 for Adam optimizer
     eps: 0.00000001  # epsilon for Adam optimizer
@@ -67,7 +69,7 @@ optimizer:
 
 # training config
 lr_scheduler: null   # learning rate scheduler
-nEpochs: 10   # number of epochs to train for
+nEpochs: 3   # number of epochs to train for
 start_epoch: 0   # manual epoch number (useful for restarts)
 save_epoch: 1   # interval epochs for saving models
 rec_iter: 100   # interval iterations for recording
@@ -87,3 +89,5 @@ metric_scoring: auc   # metric for evaluation (auc, acc, eer, ap)
 ngpu: 1   # number of GPUs to use
 cuda: true   # whether to use CUDA acceleration
 cudnn: true   # whether to use CuDNN for convolution operations
+
+save_avg: true
