--- a/DeepfakeBench_DF40/training/config/detector/rfm.yaml
+++ b/DeepfakeBench_DF40/training/config/detector/rfm.yaml
@@ -1,6 +1,11 @@
 # log dir 
 log_dir: /Youtu_Pangu_Security/public/youtu-pangu-public/zhiyuanyan/logs/df40_exps/trainOnFR/rfm
 
+metrics_dir: /home/antoine/DF40/df40_exps/trainOnFF/rfm/metrics/
+preds_dir: /home/antoine/DF40/df40_exps/trainOnFF/rfm/preds/
+save_preds: true
+
+
 # model setting
 pretrained: ./training/pretrained/xception-b5690688.pth   # path to a pre-trained model, if using one
 model_name: rfm   # model name
