--- a/DeepfakeBench_DF40/training/config/detector/srm.yaml
+++ b/DeepfakeBench_DF40/training/config/detector/srm.yaml
@@ -1,6 +1,12 @@
 # log dir 
 log_dir: /Youtu_Pangu_Security/public/youtu-pangu-public/zhiyuanyan/logs/df40_exps/trainOnFR/srm
 
+
+metrics_dir: /home/antoine/DF40/df40_exps/trainOnFF/srm/metrics/
+preds_dir: /home/antoine/DF40/df40_exps/trainOnFF/srm/preds/
+save_preds: true
+
+
 # model setting
 pretrained: ./training/pretrained/xception-b5690688.pth   # path to a pre-trained model, if using one
 model_name: srm   # model name
