--- a/DeepfakeBench_DF40/training/config/detector/clip_base.yaml
+++ b/DeepfakeBench_DF40/training/config/detector/clip_base.yaml
@@ -1,7 +1,7 @@
 # log dir 
 log_dir: /Youtu_Pangu_Security/public/youtu-pangu-public/zhiyuanyan/logs/df40_exps/trainOnEFS/clip_base
-metrics_dir: /home/antoine/DF40/df40_exps/trainOnDF40/clip_base/metrics/
-preds_dir: /home/antoine/DF40/df40_exps/trainOnDF40/clip_base/preds/
+metrics_dir:  /home/antoine/DF40/df40_exps/$trainDataset/clip_base/metrics/
+preds_dir:  /home/antoine/DF40/df40_exps/$trainDataset/clip_base/preds/
 save_preds: true
 
 #log_dir: /Youtu_Pangu_Security/public/youtu-pangu-public/zhiyuanyan/logs/df40_exps/trainOnDF40/clip_multihead
