--- a/DeepfakeBench_DF40/training/config/detector/i3d.yaml
+++ b/DeepfakeBench_DF40/training/config/detector/i3d.yaml
@@ -1,8 +1,8 @@
 # log dir 
 log_dir: /Youtu_Pangu_Security/public/youtu-pangu-public/zhiyuanyan/logs/df40_exps/trainOnFR/i3d
 
-metrics_dir: /home/antoine/DF40/df40_exps/trainOnDF40/i3d/metrics/
-preds_dir: /home/antoine/DF40/df40_exps/trainOnDF40/i3d/preds/
+metrics_dir:  /home/antoine/DF40/df40_exps/$trainDataset/i3d/metrics/
+preds_dir:  /home/antoine/DF40/df40_exps/$trainDataset/i3d/preds/
 save_preds: true
 
 # model setting
