--- a/DeepfakeBench_DF40/training/config/detector/recce.yaml
+++ b/DeepfakeBench_DF40/training/config/detector/recce.yaml
@@ -1,8 +1,8 @@
 # log dir 
 log_dir: /Youtu_Pangu_Security/public/youtu-pangu-public/zhiyuanyan/logs/df40_exps/trainOnFR/recce
 
-metrics_dir: /home/antoine/DF40/df40_exps/trainOnFF/recce/metrics/
-preds_dir: /home/antoine/DF40/df40_exps/trainOnOnFF/recce/preds/
+metrics_dir: /home/antoine/DF40/df40_exps/$trainDataset/recce/metrics/
+preds_dir: /home/antoine/DF40/df40_exps/$trainDataset/recce/preds/
 save_preds: true
 
 # model setting
@@ -26,7 +26,7 @@ compression: c23  # compression-level for videos
 train_batchSize: 64   # training batch size
 test_batchSize: 32   # test batch size
 workers: 8   # number of data loading workers
-frame_num: {'train': 8, 'test': 32}   # number of frames to use per video in training and testing
+frame_num: {'train': 8, 'test': 1}   # number of frames to use per video in training and testing
 resolution: 256   # resolution of output image to network
 with_mask: false   # whether to include mask information in the input
 with_landmark: false   # whether to include facial landmark information in the input
