--- a/DeepfakeBench_DF40/training/config/detector/sbi.yaml
+++ b/DeepfakeBench_DF40/training/config/detector/sbi.yaml
@@ -1,20 +1,19 @@
 # log dir
-log_dir: /Youtu_Pangu_Security/public/youtu-pangu-public/zhiyuanyan/logs/benchv2/redefine_df40_wocrop
+log_dir: /data/home/zhiyuanyan/logs/benchv2/sbi_v3
 
-
-metrics_dir: /home/antoine/DF40/df40_exps/trainOnDF40/sbi/metrics/
-preds_dir: /home/antoine/DF40/df40_exps/trainOnDF40/sbi/preds/
+metrics_dir:  /home/antoine/DF40/df40_exps/$trainDataset/sbi/metrics/
+preds_dir:  /home/antoine/DF40/df40_exps/$trainDataset/sbi/preds/
 save_preds: true
 
 # model setting
-pretrained: ./training/pretrained/xception-b5690688.pth   # path to a pre-trained model, if using one
+pretrained: /home/antoine/DF40/DeepfakeBench_DF40/training/pretrained/xception-b5690688.pth   # path to a pre-trained model, if using one
 model_name: sbi   # model name
 backbone_name: efficientnetb4  # backbone name
 
 #backbone setting
 backbone_config:
   mode: original
-  num_classes: 2 
+  num_classes: 3
   inc: 3
   dropout: false
   pretrained: true
@@ -22,20 +21,19 @@ backbone_config:
 # dataset
 all_dataset: [FaceForensics++, FF-F2F, FF-DF, FF-FS, FF-NT, FaceShifter, DeepFakeDetection, Celeb-DF-v1, Celeb-DF-v2, DFDCP, DFDC, DeeperForensics-1.0, UADFV]
 train_dataset: [FaceForensics++]
-#test_dataset: [ddim_cdf, simswap_cdf, StyleGAN3_cdf, Celeb-DF-v2, VQGAN_cdf, blendface_cdf]
-test_dataset: [simswap_cdf, sadtalker_cdf, Celeb-DF-v2, VQGAN_cdf, DiT_cdf, glide]
+test_dataset: [Celeb-DF-v2, roop, FaceShifter]
 dataset_type: blend
 
 compression: c23  # compression-level for videos
-train_batchSize: 32   # training batch size
+train_batchSize: 24   # training batch size
 test_batchSize: 32   # test batch size
 workers: 8   # number of data loading workers
-frame_num: {'train': 8, 'test': 8}   # number of frames to use per video in training and testing
+frame_num: {'train': 8, 'test': 32}   # number of frames to use per video in training and testing
 resolution: 256   # resolution of output image to network
 with_mask: false   # whether to include mask information in the input
-with_landmark: false   # whether to include facial landmark information in the input
-save_ckpt: true   # whether to save checkpoint
-save_feat: true   # whether to save features
+with_landmark: true   # whether to include facial landmark information in the input
+save_ckpt: false   # whether to save checkpoint
+save_feat: false   # whether to save features
 
 
 # data augmentation
@@ -79,13 +77,13 @@ optimizer:
 lr_scheduler: step   # learning rate scheduler step
 lr_step: 3
 lr_gamma: 0.4   # learning rate scheduler
-nEpochs: 150   # number of epochs to train for
+nEpochs: 50   # number of epochs to train for
 start_epoch: 0   # manual epoch number (useful for restarts)
 save_epoch: 1   # interval epochs for saving models
 rec_iter: 100   # interval iterations for recording
 logdir: ./logs   # folder to output images and logs
 manualSeed: 1024   # manual seed for random number generation
-save_ckpt: true   # whether to save checkpoint
+save_ckpt: false   # whether to save checkpoint
 
 # loss function
 loss_func: cross_entropy   # loss function to use
@@ -95,8 +93,6 @@ losstype: null
 metric_scoring: auc   # metric for evaluation (auc, acc, eer, ap)
 
 # cuda
-ngpu: 1   # number of GPUs to use
+
 cuda: true   # whether to use CUDA acceleration
 cudnn: true   # whether to use CuDNN for convolution operations
-
-save_avg: true
