--- a/DeepfakeBench_DF40/training/config/detector/srm.yaml
+++ b/DeepfakeBench_DF40/training/config/detector/srm.yaml
@@ -2,8 +2,8 @@
 log_dir: /Youtu_Pangu_Security/public/youtu-pangu-public/zhiyuanyan/logs/df40_exps/trainOnFR/srm
 
 
-metrics_dir: /home/antoine/DF40/df40_exps/trainOnFF/srm/metrics/
-preds_dir: /home/antoine/DF40/df40_exps/trainOnFF/srm/preds/
+metrics_dir:  /home/antoine/DF40/df40_exps/$trainDataset/srm/metrics/
+preds_dir:  /home/antoine/DF40/df40_exps/$trainDataset/srm/preds/
 save_preds: true
 
 
